# Parker

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  FSM_states.hpp  data_base.cpp  data_base.hpp  email.cpp  email.hpp  excel.cpp  excel.hpp  main.cpp  string_trimming.hpp
src/db_interactions/: CMakeLists.txt  FSM_states.hpp  db_interactions.cpp  db_interactions.hpp
